# phosphor-sel-logger

./: .gitignore  CMakeLists.txt  OWNERS  README.md  groups  meson.build  meson.options  meson_options.txt  project.config
include/: host_error_event_monitor.hpp  pulse_event_monitor.hpp  sel_logger.hpp  sensorutils.hpp  threshold_alarm_event_monitor.hpp  threshold_event_monitor.hpp  watchdog_event_monitor.hpp
rsyslog/: phosphor-sel-logger.conf
rsyslog_files/: 50-ipmi-sel.conf
src/: sel_logger.cpp
test/: meson.build  test_sensorutils.cpp
