option('log-threshold', type: 'boolean',
       description: 'Automatically log SEL records for threshold sensor events')
option('log-pulse', type: 'boolean',
       description: 'Automatically log events to Redfish for pulse type assert-deassert sensor events')
option('log-watchdog', type: 'boolean',
       description: 'Automatically log SEL records for watchdog events')
option('log-alarm', type: 'boolean',
       description: 'Monitor threshold alarm signals and log SEL records for threshold sensor events')
option('send-to-logger', type: 'boolean',
       description: 'Automatically log events to Redfish for pulse type assert-deassert sensor events')
option('clears-sel', type: 'boolean',
       description: 'Expose method for SEL Logger to clear the SEL records stored in ipmi_sel')
option('tests', type: 'feature', description: 'Build tests')